--- a/clioncube.ioc
+++ b/clioncube.ioc
@@ -51,11 +51,12 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI2
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP4=SPI3
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -74,19 +75,23 @@ Mcu.Pin2=PH1 - OSC_OUT
 Mcu.Pin20=PA13
 Mcu.Pin21=PA14
 Mcu.Pin22=PA15
-Mcu.Pin23=PB8
-Mcu.Pin24=PB9
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB6
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PA0-WKUP
+Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=28
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -173,6 +178,20 @@ PB2.GPIOParameters=PinState
 PB2.Locked=true
 PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
+PB3.Locked=true
+PB3.Mode=TX_Only_Simplex_Unidirect_Master
+PB3.Signal=SPI3_SCK
+PB4.GPIOParameters=PinState
+PB4.Locked=true
+PB4.PinState=GPIO_PIN_SET
+PB4.Signal=GPIO_Output
+PB5.Locked=true
+PB5.Mode=TX_Only_Simplex_Unidirect_Master
+PB5.Signal=SPI3_MOSI
+PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIO_PuPd=GPIO_PULLDOWN
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Signal=GPIO_Output
 PB9.Locked=true
@@ -254,6 +273,14 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI3.CLKPolarity=SPI_POLARITY_HIGH
+SPI3.CalculateBaudRate=2.25 MBits/s
+SPI3.DataSize=SPI_DATASIZE_16BIT
+SPI3.Direction=SPI_DIRECTION_2LINES
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity
+SPI3.Mode=SPI_MODE_MASTER
+SPI3.VirtualType=VM_MASTER
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Prescaler,Period,AutoReloadPreload
 TIM2.Period=5000
